--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <!-- Add more comments here -->
 <div id="items">
   <div class="changing-text">
-      <div class="font-size">Aa</div>
+      <div class="text" onclick="upperLowercase()">Aa</div>
       <div id=""><input type="number" id="myRange" min="0" max="50" value="20" oninput="fontRange()" >
       </div>
     <div class="bold" onclick="boldText()"><i class="fa-solid fa-bold"></i></div>
